--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,38 @@ spring:
 #    static-locations: [classpath:/static/]  #  这里配置文件改变静态资源映射 没有生效感觉
   application:
     name: reggie_take_out
+  shardingsphere:
+    datasource:
+      names:
+        master,slave
+      # 主数据源
+      master:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://43.143.25.143:3306/reggie?characterEncoding=utf-8
+        username: root
+        password: kang
+      # 从数据源
+      slave:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://43.143.25.143/reggie?characterEncoding=utf-8
+        username: root
+        password: kang
+    masterslave:
+      # 读写分离配置
+      load-balance-algorithm-type: round_robin #轮询  还有其他的从机mysql服务器
+      # 最终的数据源名称
+      name: dataSource
+      # 主库数据源名称
+      master-data-source-name: master
+      # 从库数据源名称列表，多个逗号分隔
+      slave-data-source-names: slave
+    props:
+      sql:
+        show: true #开启SQL显示，默认false
+  main:
+    allow-bean-definition-overriding: true
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
